--- a/Diagnosis.App/packages.config
+++ b/Diagnosis.App/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DataConnectionDialog" version="1.2" targetFramework="net40" />
   <package id="Extended.Wpf.Toolkit" version="2.3" targetFramework="net40" />
   <package id="Iesi.Collections" version="3.3.3.4001" targetFramework="net40" />
   <package id="log4net" version="2.0.3" targetFramework="net40" />
