--- a/Diagnosis.Common.Presentation/Diagnosis.Common.Presentation.csproj
+++ b/Diagnosis.Common.Presentation/Diagnosis.Common.Presentation.csproj
@@ -178,6 +178,9 @@
     </Compile>
     <Compile Include="Debug\LogTraceListener.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="..\VersionInfo.cs">
+      <Link>Properties\VersionInfo.cs</Link>
+    </Compile>
     <Compile Include="Styles\TreeStyle.cs" />
   </ItemGroup>
   <ItemGroup>
