--- a/Diagnosis.Data/Diagnosis.Data.csproj
+++ b/Diagnosis.Data/Diagnosis.Data.csproj
@@ -225,6 +225,9 @@
     <Compile Include="Queries\WordQuery.cs" />
     <Compile Include="Specs\NHibernateRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="..\VersionInfo.cs">
+      <Link>Properties\VersionInfo.cs</Link>
+    </Compile>
     <Compile Include="Specs\DiagnosisSpecifications.cs" />
     <Compile Include="Specs\PatientSpecifications.cs" />
     <Compile Include="Specs\WordSpecifications.cs" />
