--- a/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
+++ b/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
@@ -264,6 +264,9 @@
     <Compile Include="Search\Searchers\ISimpleSearcher.cs" />
     <Compile Include="Screens\Card\Managers\PatientViewer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="..\VersionInfo.cs">
+      <Link>Properties\VersionInfo.cs</Link>
+    </Compile>
     <Compile Include="Framework\RelayCommand.cs" />
     <Compile Include="Screens\LoginViewModel.cs" />
     <Compile Include="Screens\Patients\PatientEditorViewModel.cs" />
