--- a/Diagnosis.Models/Diagnosis.Models.csproj
+++ b/Diagnosis.Models/Diagnosis.Models.csproj
@@ -150,6 +150,7 @@
     <Compile Include="Entities\Setting.cs" />
     <Compile Include="Entities\UomType.cs" />
     <Compile Include="Enums\HealthRecordQueryScope.cs" />
+    <Compile Include="Enums\PatientsView.cs" />
     <Compile Include="Enums\HrView.cs" />
     <Compile Include="Helpers\DomainExtenstions.cs" />
     <Compile Include="Enums\HealthRecordUnit.cs" />
