--- a/Diagnosis.App/packages.config
+++ b/Diagnosis.App/packages.config
@@ -5,6 +5,7 @@
   <package id="Iesi.Collections" version="3.3.3.4001" targetFramework="net40" />
   <package id="log4net" version="2.0.3" targetFramework="net40" />
   <package id="MahApps.Metro" version="1.0.0.0" targetFramework="net40" />
+  <package id="MahApps.Metro.Resources" version="0.4.0.0" targetFramework="net40" />
   <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net40" />
   <package id="MSBuildTasks" version="1.4.0.88" targetFramework="net40" />
   <package id="NHibernate" version="3.3.3.4001" targetFramework="net40" />
