--- a/Diagnosis.ServerApp/app.config
+++ b/Diagnosis.ServerApp/app.config
@@ -55,10 +55,15 @@
         <bindingRedirect oldVersion="0.0.0.0-1.2.13.0" newVersion="1.2.13.0" />
       </dependentAssembly>
       <qualifyAssembly partialName="System.Data.SqlServerCe" fullName="System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
-      <!--<dependentAssembly>
+      <dependentAssembly>
         <assemblyIdentity name="FluentMigrator" publicKeyToken="aacfc7de5acabf05" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.3.1.0" newVersion="1.3.1.0" />
-      </dependentAssembly>-->
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Data.SqlServerCe"
+          publicKeyToken="89845dcd8080cc91" />
+        <bindingRedirect oldVersion="3.5.1.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <userSettings>
