xaml. Move SampleViewModels to DesignData
--HG--
branch : f/syncframework

--- a/Diagnosis.App/packages.config
+++ b/Diagnosis.App/packages.config
@@ -7,6 +7,7 @@
   <package id="MahApps.Metro" version="1.0.0.0" targetFramework="net40" />
   <package id="MahApps.Metro.Resources" version="0.4.0.0" targetFramework="net40" />
   <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net40" />
+  <package id="Moq" version="4.2.1409.1722" targetFramework="net40" />
   <package id="MSBuildTasks" version="1.4.0.88" targetFramework="net40" />
   <package id="NHibernate" version="3.3.3.4001" targetFramework="net40" />
 </packages>
