--- a/Diagnosis.App/Diagnosis.App.csproj
+++ b/Diagnosis.App/Diagnosis.App.csproj
@@ -700,12 +700,7 @@
     <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
   </Target>
   <PropertyGroup>
-    <PostBuildEvent>
-      REM copy nhibernate config
-
-      REM echo f | xcopy "$(SolutionDir)Diagnosis.Data\NHibernate\nhibernate.cfg.xml" "$(TargetDir)NHibernate\nhibernate.cfg.xml" /d /y
-
-      REM copy help
+    <PostBuildEvent>REM copy help
 
       echo d | xcopy "$(SolutionDir)Diagnosis.App\Resources\Help" "$(TargetDir)Help" /d /y
 
