--- a/Diagnosis.ServerApp/Diagnosis.ServerApp.csproj
+++ b/Diagnosis.ServerApp/Diagnosis.ServerApp.csproj
@@ -84,6 +84,13 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\libs\EventAggregator.dll</HintPath>
     </Reference>
+    <Reference Include="FluentValidation, Version=5.4.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\FluentValidation.5.4.0.0\lib\Net40\FluentValidation.dll</HintPath>
+    </Reference>
+    <Reference Include="FluentValidation.resources">
+      <HintPath>..\packages\FluentValidation.5.4.0.0\lib\Net40\ru\FluentValidation.resources.dll</HintPath>
+    </Reference>
     <Reference Include="Iesi.Collections, Version=1.0.1.0, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Iesi.Collections.3.3.3.4001\lib\Net35\Iesi.Collections.dll</HintPath>
