--- a/Diagnosis.App/App.config
+++ b/Diagnosis.App/App.config
@@ -10,7 +10,7 @@
     <appender name="TraceAppender" type="log4net.Appender.TraceAppender">
       <layout type="log4net.Layout.PatternLayout">
         <conversionPattern value="%date{ABSOLUTE} %-5level - %method:%line%newline   %message%newline" />
-      </layout>      
+      </layout>
     </appender>
     <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
       <lockingModel type="Diagnosis.App.App+MyLock" />
@@ -60,11 +60,10 @@
         <bindingRedirect oldVersion="0.0.0.0-1.3.1.0" newVersion="1.3.1.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Data.SqlServerCe"
-          publicKeyToken="89845dcd8080cc91"
-          />
+        <assemblyIdentity name="System.Data.SqlServerCe" publicKeyToken="89845dcd8080cc91" />
         <bindingRedirect oldVersion="3.5.1.0" newVersion="4.0.0.0" />
       </dependentAssembly>
+      <probing privatePath="bin;lib;libs" />
     </assemblyBinding>
   </runtime>
   <userSettings>
