--- a/Diagnosis.App/Diagnosis.App.csproj
+++ b/Diagnosis.App/Diagnosis.App.csproj
@@ -734,7 +734,11 @@
                   OutputFile="Properties\VersionInfo.cs"
                   AssemblyVersion="$(Major).$(Minor)"
                   AssemblyFileVersion="$(Major).$(Minor).$(Build).$(Revision)" />
-  </Target>
-  <Target Name="AfterBuild">
   </Target>-->
+  <Target Name="AfterBuild">
+    <ItemGroup>
+      <MoveToLibFolder Include="$(OutputPath)*.dll ; $(OutputPath)*.pdb ; $(OutputPath)*.xml" />
+    </ItemGroup>
+    <Move SourceFiles="@(MoveToLibFolder)" DestinationFolder="$(OutputPath)bin" OverwriteReadOnlyFiles="true" />
+  </Target>
 </Project>
