--- a/Diagnosis.ServerApp/Diagnosis.ServerApp.csproj
+++ b/Diagnosis.ServerApp/Diagnosis.ServerApp.csproj
@@ -246,8 +246,11 @@
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
-  </Target>
+  </Target>-->
   <Target Name="AfterBuild">
+    <ItemGroup>
+      <MoveToLibFolder Include="$(OutputPath)*.dll ; $(OutputPath)*.pdb ; $(OutputPath)*.xml" />
+    </ItemGroup>
+    <Move SourceFiles="@(MoveToLibFolder)" DestinationFolder="$(OutputPath)bin" OverwriteReadOnlyFiles="true" />
   </Target>
-  -->
 </Project>
