--- a/Diagnosis.ServerApp/app.config
+++ b/Diagnosis.ServerApp/app.config
@@ -64,6 +64,7 @@
           publicKeyToken="89845dcd8080cc91" />
         <bindingRedirect oldVersion="3.5.1.0" newVersion="4.0.0.0" />
       </dependentAssembly>
+      <probing privatePath="bin;lib;libs" />
     </assemblyBinding>
   </runtime>
   <userSettings>
