--- a/Diagnosis.Server.App/Diagnosis.Server.App.csproj
+++ b/Diagnosis.Server.App/Diagnosis.Server.App.csproj
@@ -240,7 +240,7 @@
   <PropertyGroup>
     <PostBuildEvent>
       REM copy sqlite.dll
-      if $(Configuration)'=='InMemory' xcopy "$(SolutionDir)libs\SQLite.Interop.dll" "$(TargetDir)" /i /d /y
+      if $(ConfigurationName) == InMemory xcopy "$(SolutionDir)libs\SQLite.Interop.dll" "$(TargetDir)" /i /d /y
 
       if not exist "$(TargetDir)x86" md "$(TargetDir)x86"
       xcopy /s /y "$(SolutionDir)packages\Microsoft.SqlServer.Compact.4.0.8876.1\NativeBinaries\x86\*.*" "$(TargetDir)x86"</PostBuildEvent>
