--- a/Diagnosis.Common/Diagnosis.Common.csproj
+++ b/Diagnosis.Common/Diagnosis.Common.csproj
@@ -149,7 +149,7 @@
     <Compile Include="Extensions\DictionaryExtensions.cs" />
     <Compile Include="Extensions\EnumExtensions.cs" />
     <Compile Include="Formatters\DateFormatter.cs" />
-    <Compile Include="DateOffset.cs" />
+    <Compile Include="Types\DateOffset.cs" />
     <Compile Include="Extensions\ConvertExtensions.cs" />
     <Compile Include="Extensions\EnumerableExtensions.cs" />
     <Compile Include="Formatters\NameFormatter.cs" />
@@ -164,7 +164,7 @@
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Util\EventArgs.cs" />
     <Compile Include="Util\ExpressionHelper.cs" />
-    <Compile Include="DateHelper.cs" />
+    <Compile Include="Util\DateHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="..\VersionInfo.cs">
       <Link>Properties\VersionInfo.cs</Link>
