--- a/Diagnosis.Client.App/App.config
+++ b/Diagnosis.Client.App/App.config
@@ -6,6 +6,12 @@
       <section name="Diagnosis.App.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
   </configSections>
+  <connectionStrings>
+    <clear />
+    <add name="client"
+         providerName="System.Data.SqlServerCE.4.0"
+         connectionString="Data Source=diagnosis.sdf;Persist Security Info=False;" />
+  </connectionStrings>
   <log4net>
     <appender name="TraceAppender" type="log4net.Appender.TraceAppender">
       <layout type="log4net.Layout.PatternLayout">
