data. Store db and layout in APPDATA, load inmemory if connection is null

--- a/Diagnosis.Client.App/App.config
+++ b/Diagnosis.Client.App/App.config
@@ -10,7 +10,7 @@
     <clear />
     <add name="client"
          providerName="System.Data.SqlServerCE.4.0"
-         connectionString="Data Source=diagnosis.sdf;Persist Security Info=False;" />
+         connectionString="Data Source=%APPDATA%\Diagnosis\Client\diagnosis.sdf;Persist Security Info=False;" />
   </connectionStrings>
   <log4net>
     <appender name="TraceAppender" type="log4net.Appender.TraceAppender">
