--- a/Diagnosis.Client.App/Diagnosis.Client.App.csproj
+++ b/Diagnosis.Client.App/Diagnosis.Client.App.csproj
@@ -190,7 +190,7 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Data.SQLite" Condition=" '$(Configuration)'!='Release' ">
+    <Reference Include="System.Data.SQLite" >
       <HintPath>..\libs\System.Data.SQLite.dll</HintPath>
     </Reference>
     <Reference Include="System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
@@ -711,15 +711,14 @@
   </Target>
   <PropertyGroup>
     <PostBuildEvent>REM copy help
-
       echo d | xcopy "$(SolutionDir)Diagnosis.Client.App\Resources\Help" "$(TargetDir)Help" /d /y
 
-      REM copy sqlite.dll
-      if $(ConfigurationName) == InMemory xcopy "$(SolutionDir)libs\SQLite.Interop.dll" "$(TargetDir)" /i /d /y
-
       REM copy sql server ce
-      if not exist "$(TargetDir)x86" md "$(TargetDir)x86"
-      xcopy /s /y "$(SolutionDir)packages\Microsoft.SqlServer.Compact.4.0.8876.1\NativeBinaries\x86\*.*" "$(TargetDir)x86"</PostBuildEvent>
+      if not exist "$(TargetDir)bin" md "$(TargetDir)bin"
+      xcopy /s /y "$(SolutionDir)packages\Microsoft.SqlServer.Compact.4.0.8876.1\NativeBinaries\x86\*.*" "$(TargetDir)bin"
+      
+      REM copy sqlite.dll
+      xcopy "$(SolutionDir)libs\SQLite.Interop.dll" "$(TargetDir)bin" /i /d /y</PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
     <PreBuildEvent>
