code. Remove unused linqspecs

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\Diagnosis.App\packages.config" />
+  <repository path="..\Diagnosis.Client.App\packages.config" />
   <repository path="..\Diagnosis.Common.Presentation\packages.config" />
   <repository path="..\Diagnosis.Common\packages.config" />
   <repository path="..\Diagnosis.Data\packages.config" />
   <repository path="..\Diagnosis.Models\packages.config" />
-  <repository path="..\Diagnosis.ServerApp\packages.config" />
+  <repository path="..\Diagnosis.Server.App\packages.config" />
   <repository path="..\Diagnosis.Tests\packages.config" />
   <repository path="..\Diagnosis.ViewModels\packages.config" />
 </repositories>
