setup. Store data in LOCALAPPDATA

--- a/Diagnosis.Server.App/app.config
+++ b/Diagnosis.Server.App/app.config
@@ -20,7 +20,7 @@
     </appender>
     <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
       <lockingModel type="Diagnosis.Server.App.App+MyLock" />
-      <file value="${LOCALAPPDATA}\Diagnosis\Logs\" />
+      <file value="${LOCALAPPDATA}\NBI_KemSU\Diagnosis\Logs\" />
       <datePattern value="yyyy.MM.dd'.log'" />
       <staticLogFileName value="false" />
       <appendToFile value="true" />
