--- a/Diagnosis.Client.App/App.config
+++ b/Diagnosis.Client.App/App.config
@@ -10,7 +10,7 @@
     <clear />
     <add name="client"
          providerName="System.Data.SqlServerCE.4.0"
-         connectionString="Data Source=%APPDATA%\Diagnosis\Client\diagnosis.sdf;Persist Security Info=False;" />
+         connectionString="Data Source=%LOCALAPPDATA%\NBI_KemSU\Diagnosis\Client\diagnosis.sdf;Persist Security Info=False;" />
   </connectionStrings>
   <log4net>
     <appender name="TraceAppender" type="log4net.Appender.TraceAppender">
@@ -20,7 +20,7 @@
     </appender>
     <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
       <lockingModel type="Diagnosis.Client.App.App+MyLock" />
-      <file value="${LOCALAPPDATA}\Diagnosis\Logs\" />
+      <file value="${LOCALAPPDATA}\NBI_KemSU\Diagnosis\Logs\" />
       <datePattern value="yyyy.MM.dd'.log'" />
       <staticLogFileName value="false" />
       <appendToFile value="true" />
