data. Save server connection for sync in user settings

--- a/Diagnosis.Client.App/App.config
+++ b/Diagnosis.Client.App/App.config
@@ -89,9 +89,6 @@
       <setting name="MainWindowState" serializeAs="String">
         <value>Normal</value>
       </setting>
-      <setting name="LoginRememberedDoctorId" serializeAs="String">
-        <value />
-      </setting>
       <setting name="HelpWindowTop" serializeAs="String">
         <value>0</value>
       </setting>
@@ -115,6 +112,15 @@
       </setting>
       <setting name="DebugFilterOn" serializeAs="String">
         <value>False</value>
+      </setting>
+      <setting name="Upgraded" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="SyncServerConstr" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="SyncServerProviderName" serializeAs="String">
+        <value />
       </setting>
     </Diagnosis.Client.App.Properties.Settings>
   </userSettings>
