--- a/Diagnosis.Server.App/app.config
+++ b/Diagnosis.Server.App/app.config
@@ -102,6 +102,9 @@
       <setting name="DebugFilterOn" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="Upgraded" serializeAs="String">
+        <value>False</value>
+      </setting>
     </Diagnosis.Server.App.Properties.Settings>
   </userSettings>
 </configuration>
