--- a/Diagnosis.Server.App/Properties/Settings.settings
+++ b/Diagnosis.Server.App/Properties/Settings.settings
@@ -29,5 +29,8 @@
     <Setting Name="DebugFilterOn" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="Upgraded" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
