model. Add HrItem Confidence
--HG--
branch : f/Confidence

--- a/Diagnosis.Data/Diagnosis.Data.csproj
+++ b/Diagnosis.Data/Diagnosis.Data.csproj
@@ -203,6 +203,7 @@
     <Compile Include="Sync\Syncer.cs" />
     <Compile Include="Sync\Scopes.cs" />
     <Compile Include="Versions\Migrations\09 AddHolderHrUpdatedAt.cs" />
+    <Compile Include="Versions\Migrations\13 AddHrItemConfidence.cs" />
     <Compile Include="Versions\Migrations\11 AlterUomFactor.cs" />
     <Compile Include="Versions\Migrations\10 AddUomType.cs" />
     <Compile Include="Versions\Migrations\08 AddDoctorSettings.cs" />
